--- a/index.html
+++ b/index.html
@@ -393,10 +393,11 @@
                             <h3>Projet Personnel</h3>
                             <p>Réalisation d'une illustration, un bol de nouilles, avec l'application Procreate sur Ipad Pro.</p>
                             <img src="img/procreate.png" style="width: 8%;">
-                          </div class="imagescarousel">
+                         
                               <img src="img/nouilles2.jpg">
                             </div>
                         </div>
+
                       </div>
 
                       <!-- Item 05 -->
@@ -519,7 +520,7 @@
                       
                         <div class="row">
                           <div class="description">
-                            <h1>Illustrations | Taeyong</h1>
+                            <h1>Illustration | Taeyong</h1>
                             <h2>Dessin, aquarelle - 2020</h2>
                             <h3>Projet Personnel</h3>
                             <p>Réalisation d'une illustration à l'aquarelle,<br> à partir d'une photographie.</p>
