--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                             <h3>Projet Personnel</h3>
                             <p>Réalisation d'une illustration à l'aquarelle,<br> à partir d'une photographie.</p>
                             <img src="img/dessin.jpeg" style="width: 15%;" alt="dessin icone">
-                          <div class="imagescarousel">
+                          </div class="imagescarousel">
                               <img src="img/tae2.jpg" alt="aquarelle">
                             </div>
                         </div>
@@ -550,9 +550,9 @@
                             <p>Réalisation de ma carte de visite avec mon logo et mes coordonnées dans le cadre de mon projet d'identité visuelle.</p>
                             <img src="img/xd.png" style="width: 8%;" alt="xd">
                           </div class="imagescarousel">
-                              <img src="img/cartevisite2.jpg" alt="carte de visite">
+                            <img src="img/cartevisite2.jpg" alt="aquarelle">
                             </div>
-                        </div>
+                          </div>
                         
                       </div>
 
